--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <script src="urls.js"></script>
   <script>
     window.onload = function () {
-      const url = urls[Math.floor(Math.random() * urls.length)];
-      window.location.replace(url);
-    };
+      const url = urls[Math.floor(Math.random() * urls.length)]
+      window.location.replace(url)
+    }
   </script>
   <body></body>
 </html>
